@@ -11,6 +11,7 @@ ufw (0.36.2) UNRELEASED; urgency=medium
     - mitigate odd length string with unhexlify (Closes: 1034568)
   * add locales/po/ro.po. Thanks Remus-Gabriel Chelu (Closes: 1034119)
   * add '-h' and show help with no args (LP: #1965462)
+  * src/backend.py: add get_rules_ipv4() and get_rules_ipv6() (LP: #1951018)
 
  -- Jamie Strandboge <jdstrand@ubuntu.com>  Tue, 16 May 2023 07:58:56 -0500
 
